--- a/templates/index.html
+++ b/templates/index.html
@@ -368,7 +368,7 @@
     <div class="search-container">
       <input
         type="text"
-        placeholder="Pesquise um problema mecânico"
+        placeholder="Pesquise um problema mecânico ou eletrônico"
         autocomplete="off"
         readonly
         onclick="window.location.href='{{ url_for('search') }}';"
