--- a/templates/solucao.html
+++ b/templates/solucao.html
@@ -228,7 +228,8 @@
     .mini-steps-block {
       margin-left: 1rem;
       margin-top: 1rem;
-      border-left: 3px dashed #ccc;
+      /* Altere aqui para a cor #333: */
+      border-left: 3px dashed #333;
       padding-left: 1rem;
     }
     .mini-step-title {
